# optolink-splitter

./: .flake8  .gitignore  MQTT_SET_TOPICS.md  README.md  allupdate.sh  c_LoggerUtil.py  c_LoggingSerial.py  c_logging.py  c_polllist.py  c_settings_adapter.py  c_tcpserver.py  c_w1value.py  create_entities.py  deploy.sh  entities,json  entities.json  example_poll_items.csv  example_w1sensors.csv  ha_publish.py  ha_shared_config.py.example  homeassistant_adapter.py  homeassistant_create_entities.py  homeassistant_entities.json  homeassistant_poll_list.py.example  homeassistant_publish.py  install.sh  list_ports.py  logger_util.py  mqtt_util.py  onewire_util.py  optolinkvs1.py  optolinkvs2.py  optolinkvs2_switch.py  optolog_nice.py  poll_list.py.example  pyproject.toml  requests_util.py  scan_optolink_range.py  serlog.py  serlog2log.py  (+9 more)
.github/: release-drafter.yml
.github/workflows/: build.yml  main.yml  publish.yml  test.yml
optolink-splitter/: serlog.py  tcpip_util.py
optolink_splitter/: cli.py  config_model.py  list_ports.py  optolinkvs2.py  optolinkvs2_switch.py  serlog.py
optolink_splitter/utils/: common_utils.py  mqtt_util.py  onewire_util.py  requests_util.py  requests_util_bkp.py  tcpip_util.py  tcpip_util_bkp.py  utils.py  viconn_util.py  viessdata_util.py
tests/: test_cli.py
